Try without access key

--- a/travis.yml
+++ b/travis.yml
@@ -11,3 +11,10 @@ install:
 
 script:
   - pytest
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "personal-app"
+  env: "django-env"
+  bucket_name: "elasticbeanstalk-us-east-1-982534388341"
