Optimized Travis CI config

--- a/travis.yml
+++ b/travis.yml
@@ -8,13 +8,11 @@ python:
   - "3.12"
 
 install:
-  - pip install -r requirements.txt
-
-before_script:
-  - black --check .  # Validate formatting
-  - flake8  # Lint code
+  - pip install -r requirements.txt  # Install all dependencies from requirements.txt
 
 script:
+  - black --check .  # Validate formatting
+  - flake8  # Lint code
   - coverage run --source=. -m unittest discover  # Run tests
 
 after_success:
@@ -27,4 +25,4 @@ deploy:
   env: "django-env"
   bucket_name: "elasticbeanstalk-us-east-1-982534388341"
   on:
-  branch: main  # Deploy only from the main branch
+    branch: main  # Deploy only from the main branch
